@@ -1,2 +1,1 @@
-DIST wget-1.16.1.tar.xz 1760120 SHA256 2b96c707ee15fe847f5bc2f872a7a530dca803b927a750419b44f50803e14d33 SHA512 28f69b2037bb3ea34b109bb20d99da7056e025dd9cce18a74cde2ffcc61933625b643673c76a7ba59b42d7e029898774da2d8af0fdbca3cffd5e4434c30e339a WHIRLPOOL a5ed1b7515acbfb33390c575588f8f476bf537eb90ebaaeb2b880e1962f15a6992eb7aa4a977b554fc6e34d384569f132760df7df9c48007e369e9773ceda696
 DIST wget-1.16.tar.xz 1697308 SHA256 9261dd090a17687b6dc0682a257e90a926def15624b650e8f799af57e5c8b0e7 SHA512 20f1247a344cac8f9120a506a4ca1fff84e5f3f5abb8492f67c22d213cb41cbfa24d5a68b91512a6ca42765d319bea8785adff8fad58d854f8f563c6593b4298 WHIRLPOOL a1094b27f77547baf7dac6f1a6ded691b3a043caff948e8fd84555a730d6a02ae157f4d72144f3c1672439166da28a4cca26f9c4f7ec4473603899545cc956b4
